[project]
name = "xpostplanner"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sserada", email = "hirawatasou@gmail.com" }
]
dependencies = [
    "discord-py>=2.5.2",
    "tweepy>=4.16.0",
    "schedule>=1.2.2",
    "python-dotenv>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xpostplanner"]
